# AutoCPS

./: .gitignore  LICENSE  Makefile  README.md  autocoder.py  build_config.json  physical_system.py  physical_systems.py
.github/workflows/: python-app.yml
AutocpsKsp/: AutocpsKsp.sln
AutocpsKsp/AutocpsKsp/: AutoCpsController.cs  AutocpsKsp.csproj
AutocpsKsp/AutocpsKsp/Properties/: AssemblyInfo.cs
autocoder/: README.md  autocoder.py  build_all.py  code_generation.py  physical_systems.py  software_systems.py
cspice/: CMakeLists.txt  README.md
example/: CMakeLists.txt  README.md  datatypes.cpp  datatypes.h  fsw_stub.cpp  fsw_stub.h  imu.cpp  imu.h  main.cpp  params.h
fsw/: CMakeLists.txt  CMakePresets.json  README.md  att_ctrl.cpp  att_ctrl.h  autocode.cpp  autocode.h  autonav.cpp  autonav.h  clock.cpp  clock.h  datatypes.cpp  datatypes.h  imu.cpp  imu.h  ivp.cpp  ivp.h  kalman.cpp  kalman.h  main.cpp  params.h  pos_ctrl.cpp  pos_ctrl.h  sensor.cpp  sensor.h  seq.cpp  seq.h  servo_ctrl.cpp  servo_ctrl.h  stub.cpp  stub.h
fsw/cspice/: CMakeLists.txt  README.md
probeCoreOcto2_v2/: probeCoreOcto2_v2.cfg
